Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumObjTextObj.quorum
class Main
    action Main
        Number v
        v:SetValue(Test())
    end

    action Test() returns Number
        Text var
        var:SetValue("text")
        return var
    end
end